--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,11 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
+# Images
+.png
+.jpeg
+.jpg
+.pdf
+
+
 # End of https://www.gitignore.io/api/macos,microsoftoffice,r
