--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # Created by https://www.gitignore.io/api/macos,microsoftoffice,r
-
 ### macOS ###
 *.DS_Store
 .AppleDouble
 .LSOverride
-
 # Icon must end with two \r
 Icon
 # Thumbnails
@@ -23,77 +21,70 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-
-
 ### MicrosoftOffice ###
 *.tmp
-
-
 # Word temporary
 ~$*.doc*
-
 # Word
 *.doc
 *.docx
-
 # Excel
 *.xlsx
 *.xls
-
 # Excel temporary
 ~$*.xls*
-
 # Excel Backup File
 *.xlk
-
 # PowerPoint temporary
 ~$*.ppt*
-
 # Visio autosave temporary files
 *.~vsdx
-
-
 ### R ###
 # History files
 .Rhistory
 .Rapp.history
-
 # Session Data files
 .RData
-
 # Example code in package build process
 *-Ex.R
-
 # Output files from R CMD build
 /*.tar.gz
-
 # Output files from R CMD check
 /*.Rcheck/
-
 # RStudio files
 .Rproj.user/
 .Rproj
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
 # knitr and R markdown default cache directories
 /*_cache/
 /cache/
-
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
-
 # Images
 .png
 .jpeg
 .jpg
 .pdf
-
-
 # End of https://www.gitignore.io/api/macos,microsoftoffice,r
+Barplot.Anforderungen.png
+Barplot.Caption.png
+Barplot.Hashtag.png
+Barplot.Place.png
+Boxplot.Comments.png
+Boxplot.Interactions.png
+Boxplot.Likes.png
+Boxplot.MediaValue.png
+Boxplot.New.Followers.png
+Boxplot.New.Posts.png
+Boxplot.Total.Followers.png
+Boxplot.Total.Posts.png
+Boxplot.interactionsANDanford.png
+Boxplot.interactionsANDplace.png
+Boxplot.likesANDhashtags.png
+Boxplot.newFollowersANDcaption.png
+table1b Sheet1.pdf
