update after meeting with Alisa

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ Boxplot.interactionsANDplace.png
 Boxplot.likesANDhashtags.png
 Boxplot.newFollowersANDcaption.png
 table1b Sheet1.pdf
+.Rproj.user
